--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "main": "server.js",
   "devDependencies": {
-   "webpack": "~1.4.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "webpack": "~1.4.3",
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
     "css-loader": "~0.9.0",
-    "webpack-dev-server": "~1.6.5",
     "jshint-loader": "~0.8.0",
     "jsxhint-loader": "~0.2.0",
     "babel": "^4.0.0",
