--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.0.1",
   "main": "server.js",
   "devDependencies": {
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "webpack": "~1.4.3",
-    "style-loader": "~0.8.0",
-    "url-loader": "~0.5.5",
-    "css-loader": "~0.9.0",
+    "babel": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "~0.23.1",
     "jshint-loader": "~0.8.0",
     "jsxhint-loader": "~0.2.0",
-    "babel": "^4.0.0",
-    "babel-loader": "^4.0.0",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-hot-loader": "^1.0.7",
-    "react-material-alert": "^1.0.0"
+    "react-material-alert": "^2.0.1",
+    "style-loader": "~0.13.1",
+    "url-loader": "~0.5.5",
+    "webpack": "~1.12.14"
   }
 }
